# uwutils

./: .gitignore  Cargo.toml  README.md  install.sh
uwu-atag/: Cargo.toml
uwu-atag/src/: Cargo.toml  main.rs  tag_reader.rs
uwu-id3/src/: Cargo.toml  main.rs
uwu-mp3c/: Cargo.toml
uwu-mp3c/src/: analyzer.rs  frame.rs  main.rs  repair.rs
uwu-pdf/: Cargo.toml
uwu-pdf/src/: analysis_helpers.rs  extraction_helpers.rs  main.rs  pdf_ops.rs  pdf_post_parse_sec_checks.rs  pdf_pre_parse_sec_checks.rs
uwu-qr/: Cargo.toml
uwu-qr/src/: clipboard.rs  image_io.rs  main.rs  qr_decoder.rs
