[package]
name = "uwu-mp3c"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
log = "0.4"
mp3-duration = "0.1"
plotters = "0.3"
pretty_env_logger = "0.5"
symphonia = { version = "0.5", features = ["mp3"] }
