[package]
name = "uwu-qr"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
rqrr = "0.8"
image = "0.25"
arboard = "3.4"
colored = "2.2.0"
log = "0.4.29"
pretty_env_logger = "0.5.0"

[target.'cfg(target_os = "linux")'.dependencies]
wl-clipboard-rs = "0.9"
